[workspace]
members = [
    "node",
    "pallets/organization-identity",
    "pallets/fungible-assets",
    "pallets/non-fungible-assets",
    "pallets/mechanics",
    "pallets/support",
    "pallets/users",
    "pallets/template",
    "runtime",
]
[profile.release]
panic = "unwind"
incremental = true
debug = 1
lto = "off"
